--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -40,11 +40,11 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ${{github.workspace}}/build/bin/et_dt_validation
 
-    - name: Code-Coverage
-      working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: make gcov
+    #- name: Code-Coverage
+    #  working-directory: ${{github.workspace}}/build
+    #  # Execute tests defined by the CMake configuration.  
+    #  # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+    #  run: make gcov
 
     - name: Upload 
       uses: codecov/codecov-action@v1
