--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -45,8 +45,8 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        gcov -b -o ${{github.workspace}}/src/CMakeFiles/Crypto.dir/src_main crypto_aos.c.gnco crypto_config.c.gnco crypto_key_mgmt.c.gnco crypto_mc.c.gnco crypto_tc.c.gnco crypto_tm.c.gnco crypto_user.c.gnco crypto.c.gnco sadb_routine_inmemory.template.c.gnco 
-        lcov -c --directory ${{github.workspace}}/src/CMakeFiles/Crypto.dir/src_main --output-file ${{github.workspace}}/build/coverage/crypto_aos.c.gcov,${{github.workspace}}/build/coverage/results.info
+        gcov -b -o crypto_aos.c.gnco crypto_config.c.gnco crypto_key_mgmt.c.gnco crypto_mc.c.gnco crypto_tc.c.gnco crypto_tm.c.gnco crypto_user.c.gnco crypto.c.gnco sadb_routine_inmemory.template.c.gnco 
+        lcov -c --directory ${{github.workspace}}/src/CMakeFiles/Crypto.dir/src_main --output-file {{github.workspace}}/build/coverage/results.info
   
     - name: Upload 
       uses: codecov/codecov-action@v1
