--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -38,14 +38,16 @@ jobs:
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ${{github.workspace}}/build/bin/et_dt_validation
+      run: |
+        ${{github.workspace}}/build/bin/et_dt_validation
+        ctest -C ${{env.BUILD_TYPE}}
 
     - name: Code-Coverage
       working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: gcov -b -o crypto_aos.c.gnco crypto_config.c.gnco crypto_key_mgmt.c.gnco crypto_mc.c.gnco crypto_tc.c.gnco crypto_tm.c.gnco crypto_user.c.gnco crypto.c.gnco sadb_routine_inmemory.template.c.gnco 
-  
+      run: make gcov
+
     - name: Upload 
       uses: codecov/codecov-action@v1
       with:
