ut_tc_process stubs and cmake work

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -25,6 +25,10 @@ add_test(NAME UT_TC_APPLY
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_tc_apply 
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
+add_test(NAME UT_TC_PROCESS
+        COMMAND ${PROJECT_BINARY_DIR}/bin/ut_tc_process
+        WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+
 add_test(NAME UT_CRYPTO_CONFIG
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_crypto_config 
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
