--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Dependencies
+      run: sudo apt-get update
       run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev python3 lcov
 
     - name: Install Python Libraries
