--- a/.github/workflows/utest.yml
+++ b/.github/workflows/utest.yml
@@ -19,8 +19,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install Dependencies
+    - name: Update
       run: sudo apt-get update
+
+    - name: Install Dependencies
       run: sudo apt-get install -y libgpg-error-dev libgcrypt20-dev
 
     - name: Configure CMake
