--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  debug_libgcrypt_build:
+  mariadb_build:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
