Update automated branches to build on main/dev

--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -2,7 +2,7 @@ name: Build
 
 on: 
   push:
-    branches: [ 88-add-github-automated-build-integration-tests-for-sadb-mariadb-interface-1 ]
+    branches: [ main,dev ]
   pull_request:
 
 jobs:
