--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,6 +45,10 @@ add_test(NAME UT_CRYPTO_MC
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_crypto_mc 
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
+add_test(NAME UT_TM_APPLY
+         COMMAND ${PROJECT_BINARY_DIR}/bin/ut_tm_apply 
+         WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+
 # add_test(NAME UT_MARIADB
 #          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_mariadb
 #          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
