[nasa-itc/cryptolib#2] Update Cmake CFE checks;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,8 +29,11 @@ OPTION(ENCTEST "Encryption-Tests" OFF) # Disabled by default, enable with: -DENC
 OPTION(CODECOV "Code-Coverage" OFF) # Disabled by default, enable with: -DCODECOV=ON
 OPTION(SYSTEM_INSTALL "SystemInstall" OFF) #Disabled by default, enable with: -DSYSTEM_INSTALL=ON
 
-set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")
-set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
+IF(NOT DEFINED CFE_SYSTEM_PSPNAME)
+    # Not cFE / cFS
+    set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")
+    set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)
+ENDIF()
 
 IF(CRYPTO_SUBMODULE_INSTALL) #If building CryptoLib as a submodule of another build system (EG, JPL KMC, Nasa NOS3, etc...)
     set(CMAKE_INSTALL_PREFIX ${CRYPTO_SUBMODULE_INSTALL})
@@ -66,12 +69,10 @@ include_directories(include)
 # The shared OSAL and cFE include directories should always be used
 # Note that this intentionally does NOT include PSP-specific includes, just the generic
 # Only include cFS/NOS3 directories if env var is defined
-if(DEFINED ENV{CFECORE_SOURCE_DIR}) #if ${CFECORE_SOURCE_DIR} is set, expect cFS build infrastructure to be in place.
+IF(DEFINED CFE_SYSTEM_PSPNAME)
     include_directories(${CFECORE_SOURCE_DIR}/src/inc)
     include_directories(${CFEPSP_SOURCE_DIR}/fsw/inc)
     ADD_DEFINITIONS(-DNOS3)
-else()
-    #pass
 endif()
 
 if(NOT DEFINED ${PROJECT_BINARY_DIR})
@@ -84,4 +85,6 @@ if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MYPROJECT_BUILD_TESTING) AND BUI
     add_subdirectory(test)
 endif()
 
-add_subdirectory(util)
+IF(NOT DEFINED CFE_SYSTEM_PSPNAME)
+    add_subdirectory(util)
+ENDIF()
