--- a/.github/workflows/utest.yml
+++ b/.github/workflows/utest.yml
@@ -39,6 +39,24 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ${{github.workspace}}/build/bin/ut_tc_apply
+      
+    - name: Test-TC_PROCESS
+      working-directory: ${{github.workspace}}/build
+      # Execute tests defined by the CMake configuration.  
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: ${{github.workspace}}/build/bin/ut_tc_process
+      
+    - name: Test-TM_APPLY
+      working-directory: ${{github.workspace}}/build
+      # Execute tests defined by the CMake configuration.  
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: ${{github.workspace}}/build/bin/ut_tm_apply
+      
+    - name: Test-TM_PROCESS
+      working-directory: ${{github.workspace}}/build
+      # Execute tests defined by the CMake configuration.  
+      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
+      run: ${{github.workspace}}/build/bin/ut_tm_process
     
     - name: Test-CRYPTO_CONFIG
       working-directory: ${{github.workspace}}/build
