[nasa/cryptolib#145] Moved crypto modules into single source folder;

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,19 +27,19 @@ else()
 endif()
 
 if(LIBGCRYPT)
-    aux_source_directory(src_cryptography/src_libgcrypt LIB_SRC_LIBGCRYPT_FILES)
-    list(APPEND LIB_SRC_FILES ${LIB_SRC_LIBGCRYPT_FILES})
+    aux_source_directory(crypto/libgcrypt LIBGCRYPT_FILES)
+    list(APPEND LIB_SRC_FILES ${LIBGCRYPT_FILES})
 else()
-    aux_source_directory(src_feature_stubs/cryptography_libgcrypt_stub LIB_SRC_LIBGCRYPT_FILES)
-    list(APPEND LIB_SRC_FILES ${LIB_SRC_LIBGCRYPT_FILES})
+    aux_source_directory(crypto/libgcrypt_stub LIBGCRYPT_FILES)
+    list(APPEND LIB_SRC_FILES ${LIBGCRYPT_FILES})
 endif()
 
 if(KMCCRYPTO)
-    aux_source_directory(src_cryptography/src_kmc_crypto_service LIB_SRC_KMC_CRYPTO_FILES)
-    list(APPEND LIB_SRC_FILES ${LIB_SRC_KMC_CRYPTO_FILES})
+    aux_source_directory(crypto/kmc KMC_FILES)
+    list(APPEND LIB_SRC_FILES ${KMC_FILES})
 else()
-    aux_source_directory(src_feature_stubs/cryptography_kmc_stub LIB_SRC_KMC_CRYPTO_FILES)
-    list(APPEND LIB_SRC_FILES ${LIB_SRC_KMC_CRYPTO_FILES})
+    aux_source_directory(crypto/kmc_stub KMC_FILES)
+    list(APPEND LIB_SRC_FILES ${KMC_FILES})
 endif()
 
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
