[nasa/cryptolib#145] Renamed src_main to core and updated .gitignore;

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,16 @@
+#
+# Metadata
+#
+.vagrant
+.vscode
 .idea
-vgcore*
-**core
+
+#
+# Packages and Build Files
+#
+__pycache__
+*.dat
 *.so
 build
 venv
-*.dat
-.vscode
-__pycache__
-
-#CMake.gitignore
-CMakeLists.txt.user
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-cmake-build-debug
-**.cbp
-_deps
-
-DartConfiguration.tcl
-
-install
+vgcore*
