--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -17,33 +17,33 @@ jobs:
       - name: Configure CMake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
         # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-        run: cmake -B ${{github.workspace}}/build -DDEBUG=1 -DSA_MARIADB=1 -DCRYPTO_LIBGCRYPT=1 -DCRYPTO_KMC=0 -DTEST=1
+        run: cmake -B /home/runner/work/CryptoLib/CryptoLib//build -DDEBUG=1 -DSA_MARIADB=1 -DCRYPTO_LIBGCRYPT=1 -DCRYPTO_KMC=0 -DTEST=1
 
       - name: Build
         # Build your program with the given configuration
-        run: cmake --build ${{github.workspace}}/build 
+        run: cmake --build /home/runner/work/CryptoLib/CryptoLib/build 
    
       - name: Initailize SADB
-        working-directory: ${{github.workspace}}
+        working-directory: /home/runner/work/CryptoLib/CryptoLib/build
         #Maybe create a variable for this SQL location
         run: |
           ls
-          cmake -B ${{github.workspace}}/build -DDEBUG=1 -DSA_MARIADB=1 -DCRYPTO_LIBGCRYPT=1 -DCRYPTO_KMC=0 -DTEST=1
-          cmake --build ${{github.workspace}}/build 
+          cmake -B /home/runner/work/CryptoLib/CryptoLib/build -DDEBUG=1 -DSA_MARIADB=1 -DCRYPTO_LIBGCRYPT=1 -DCRYPTO_KMC=0 -DTEST=1
+          cmake --build /home/runner/work/CryptoLib/CryptoLib//build 
           ls
-          cd ${{github.workspace}}/src/sa/sadb_mariadb_sql
+          cd /home/runner/work/CryptoLib/CryptoLib//src/sa/sadb_mariadb_sql
           echo "----------------"
           /etc/init.d/mysql start
           mysql --host=localhost -uroot -pitc123! < delete_sadb.sql
           mysql --host=localhost -uroot -pitc123! < create_sadb.sql
-          cd ${{github.workspace}}/src/sa/test_sadb_mariadb_sql
+          cd /home/runner/work/CryptoLib/CryptoLib//src/sa/test_sadb_mariadb_sql
           mysql --host=localhost -uroot -pitc123! < create_sadb_unit_test_user_grant_permissions.sql
           mysql --host=localhost -uroot -pitc123! < create_sadb_jpl_unit_test_security_associations.sql
-          cd ${{github.workspace}}
+          cd /home/runner/work/CryptoLib/CryptoLib/
           ls
-          cd ${{github.workspace}}/build
+          cd /home/runner/work/CryptoLib/CryptoLib/build
           ls
-          cd ${{github.workspace}}/bin
+          cd /home/runner/work/CryptoLib/CryptoLib/bin
           ./ut_mariadb
           
     # mysql --host=localhost -uroot -pitc123! < create_sadb_unit_test_security_associations.sql
